--- a/heart.ipynb
+++ b/heart.ipynb
@@ -6,11 +6,7 @@
     "id": "mgGOzIvwjouv"
    },
    "source": [
-    "# **PRACTICA FINAL**\n",
-    "\n",
-    "El siguiente Notebook muestra el desarrollo de la practica final para la electiva TIC en Salud. Desarrolla el procesamiento y análisis de datos de un dataset sobre la presencia de enfermedades cardiovasculares y diferentes variables que pueden indicar dicha presencia en un paciente.\n",
-    "\n",
-    "## **INTEGRANTES**\n",
+    "## **AUTORES**\n",
     "\n",
     "Jarby Daniel Salazar\n",
     "\n",
